--- a/package.json
+++ b/package.json
@@ -1,11 +1,21 @@
 {
     "devDependencies": {
-        "laravel-mix": "^6.0.41"
+        "@tailwindcss/aspect-ratio": "^0.4.2",
+        "@tailwindcss/forms": "^0.5.7",
+        "@tailwindcss/typography": "^0.5.10",
+        "autoprefixer": "^10.4.18",
+        "browser-sync-webpack-plugin": "^2.3.0",
+        "daisyui": "^4.7.2",
+        "laravel-mix": "^6.0.41",
+        "postcss": "^8.4.35",
+        "tailwindcss": "^3.4.1"
     },
     "workspaces": {
         "packages": [
             "modules/backend",
-            "modules/system"
-        ]
+            "modules/system",
+            "themes/mcgonigle-studio"
+        ],
+        "ignoredPackages": []
     }
 }
